# weee

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  req.txt
.github/workflows/: CI.yaml
.weee/: dep.version.toml  project.versio.toml  project.version.toml
0.1/: 404.html  index.html
0.1/advanced-guide/: index.html
0.1/contributing/: index.html
0.1/user-guide/: index.html
src/: config.rs  context.rs  error.rs  handleable.rs  main.rs  rtcontext.rs
src/commands/: bump.rs  init.rs  mod.rs  move.rs
src/commands/profile/: add.rs  mod.rs  remove.rs
src/tests/: check.rs  command.rs  hello.rs  mod.rs
src/tests/commands/: bump.rs  init.rs  mod.rs  move.rs
src/tests/projects/simple/: pyproject.toml  req.txt
src/tests/projects/simple/.weee/: dep.version.toml  project.version.toml
src/tests/utils/: mod.rs  simple_project.rs
