[package]
name = "weee"
version = "0.1.0"
edition = "2021"
description = "Advanced version bumper for any project"
readme = "README.md"
homepage = "https://github.com/deknowny/weee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
