[package]
name = "weee"
version = "0.1.10"
edition = "2021"
description = "Advanced version bumper for any project"
readme = "README.md"
homepage = "https://github.com/deknowny/weee"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = "1.0.137"
serde_derive = "1.0.137"
toml = "0.5.9"
toml_edit = "0.14.4"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
colored = "2.0.0"
terminal_size = "0.1.17"

[dev-dependencies]
tempfile = "3.3.0"
fs_extra = "1.2.0"
serial_test = "0.6.0"
